// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

// XXX
export class OA {};
export type A = { +x: OA; };
declare export function bar(): A;

=====================================output=====================================
// @flow

// XXX
export class OA {}
export type A = { +x: OA };
declare export function bar(): A;

================================================================================
`;

exports[`b1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type { OA } from './a';
export type B = { +x: OA; }

=====================================output=====================================
// @flow

import type { OA } from "./a";
export type B = { +x: OA };

================================================================================
`;

exports[`b2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type { A } from './a';
declare export function foo(): A;

=====================================output=====================================
// @flow

import type { A } from "./a";
declare export function foo(): A;

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import type { B } from './b1';
import { foo } from './b2';
(foo(): B);

=====================================output=====================================
// @flow

import type { B } from "./b1";
import { foo } from "./b2";
(foo(): B);

================================================================================
`;
